--- a/parcours-personnel.html
+++ b/parcours-personnel.html
@@ -26,15 +26,9 @@
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
                     <a class="navbar-brand" href="index.html">
-                        <h1>Axel FT  <small>Portfolio</small></h1>
-                    </a>
+                        <h1>Axel FT  <small>Portfolio</small></h1> </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -64,6 +58,23 @@
             <!-- /.container-fluid -->
         </nav>
     </header>
+    <div id="wrapper"></div>
+    <footer class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container">
+            <div class="navbar-left">
+                <p class="text-muted">© Copyright 2016 Axel Floquet-Trillot</p>
+            </div>
+            <div class="navbar-right">
+                <script type="text/javascript">
+                    genererIconeMail();
+                </script>
+                <a href="https://www.facebook.com/axelft"><img src="" alt="Facebook"></a>
+                <a href="https://www.linkedin.com/axelft"><img src="" alt="LinkedIn"></a>
+                <a href="https://www.3dhubs.com/hubs/axelft0"><img src="" alt="3DHubs"></a>
+                <a href="https://bitbucket.org/axelft/"><img src="" alt="BitBucket"></a>
+            </div>
+        </div>
+    </footer>
     <!-- JQUERY ET BOOTSRAP JS-->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
