--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style-general.css">
     <link rel="stylesheet" href="css/style-menu.css">
     <link rel="stylesheet" href="css/style-parcours-pro.css">
+    <script src="js/mail.js" type="text/javascript"></script>
     <!-- BOOTSTRAP -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -84,6 +85,7 @@
                             <div class="col-xs-12 col-sm-9 col-md-10">
                                 <div class="row flex flex-row">
                                     <div class="col-xs-3 col-sm-5 text-center">
+                                        <div class="ligne-temps"></div>
                                         <div class="date center-block flex">
                                             <h4>2009 - 2012</h4> </div>
                                     </div>
@@ -136,7 +138,7 @@
                                 <div class="row flex flex-row">
                                     <div class="col-xs-3 col-sm-5 text-center">
                                         <div class="date center-block flex">
-                                            <h4><span class="glyphicon glyphicon-education" aria-hidden="true"></span>Juin 2016</h4></div>
+                                            <h4><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Juin 2016</h4></div>
                                     </div>
                                     <div class="col-xs-9 col-sm-7 flex"><strong>Obtention de la licence Sciences et Technologies - Mention Sciences pour la Santé</strong> </div>
                                 </div>
@@ -251,7 +253,18 @@
     </div>
     <footer class="navbar navbar-default navbar-fixed-bottom">
         <div class="container">
-            <p class="text-muted">Copyright</p>
+            <div class="navbar-left">
+                <p class="text-muted">© Copyright 2016 Axel Floquet-Trillot</p>
+            </div>
+            <div class="navbar-right">
+                <script type="text/javascript">
+                    genererIconeMail();
+                </script>
+                <a href="https://www.facebook.com/axelft"><img src="" alt="Facebook"></a>
+                <a href="https://www.linkedin.com/axelft"><img src="" alt="LinkedIn"></a>
+                <a href="https://www.3dhubs.com/hubs/axelft0"><img src="" alt="3DHubs"></a>
+                <a href="https://bitbucket.org/axelft/"><img src="" alt="BitBucket"></a>
+            </div>
         </div>
     </footer>
     <!-- JQUERY ET BOOTSRAP JS-->
