--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mon Portfolio</title>
     <link rel="stylesheet" href="css/style-general.css">
-    <link rel="stylesheet" href="css/style-menu.css">
+    <script type="text/javascript" src="js/mail.js"></script>
     <!-- BOOTSTRAP -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -24,16 +24,17 @@
     <header>
         <nav class="navbar navbar-default">
             <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
+                <!-- DEBUT Titre site et logo menu mobile -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
                     <a class="navbar-brand" href="index.html">
                         <h1>Axel FT  <small>Portfolio</small></h1> </a>
                 </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
+                <!-- FIN Titre site et logo menu mobile -->
+                <!-- DEBUT liens menu -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"> <a href="index.html">Présentation Personnelle <span class="sr-only">(current)</span></a> </li>
+                        <li class="active"><a href="index.html">Présentation Personnelle<span class="sr-only">(current)</span></a></li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Parcours <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="parcours-professionnel.html">Professionnel</a></li>
@@ -53,25 +54,31 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
-                <!-- /.navbar-collapse -->
+                <!-- FIN Liens menu -->
             </div>
-            <!-- /.container-fluid -->
+            <!-- FIN container-fluid -->
         </nav>
     </header>
-    <div id="wrapper"></div>
+    <div id="wrapper">
+        <div class="container-fluid">
+            <div class="row">
+                <div id="img-header" class="flex"><img src="img/presentation/profil.jpg" alt="" class="img-responsive img-circle center-block" id="img-profile"></div>
+            </div>
+        </div>
+    </div>
     <footer class="navbar navbar-default navbar-fixed-bottom">
         <div class="container">
             <div class="navbar-left">
-                <p class="text-muted">© Copyright 2016 Axel Floquet-Trillot</p>
+                <p>© Copyright 2016 Axel Floquet-Trillot</p>
             </div>
-            <div class="navbar-right">
+            <div class="navbar-right flex flex-row">
                 <script type="text/javascript">
                     genererIconeMail();
                 </script>
-                <a href="https://www.facebook.com/axelft"><img src="" alt="Facebook"></a>
-                <a href="https://www.linkedin.com/axelft"><img src="" alt="LinkedIn"></a>
-                <a href="https://www.3dhubs.com/hubs/axelft0"><img src="" alt="3DHubs"></a>
-                <a href="https://bitbucket.org/axelft/"><img src="" alt="BitBucket"></a>
+                <a href="https://www.facebook.com/axelft" target="_blank"><img src="img/facebook.svg" alt="Facebook" class="img-responsive img-circle" width="32"></a>
+                <a href="https://www.linkedin.com/in/axel-floquet-trillot-79b605108" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn" class="img-responsive" width="32"></a>
+                <a href="https://www.3dhubs.com/paris/hubs/axel-0" target="_blank"><img src="img/3D-Hubs-logo.png" class="img-responsive img-circle" width="32" alt="3DHubs"></a>
+                <a href="https://bitbucket.org/axelft/" target="_blank"><img src="img/bitbucket.svg" alt="BitBucket" width="32" class="img-responsive img-circle"></a>
             </div>
         </div>
     </footer>
