Enregistrement du soir

--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -79,8 +79,10 @@
                     <!-- DEBUT Etudes -->
                     <div class="tab-pane fade in active" id="etudes">
                         <div class="row filiere">
-                            <div class="col-xs-6 col-xs-offset-3 visible-xs"> <img src="img/parcours-pro/hoche.jpg" alt="" class="img-responsive img-rounded center-block" width="130" id="logo-hoche">
-                                <br> </div>
+                            <div class="row visible-xs">
+                                <div class="col-xs-6 col-xs-offset-3 visible-xs"> <img src="img/parcours-pro/hoche.jpg" alt="" class="img-responsive img-rounded center-block" width="130" id="logo-hoche">
+                                    <br> </div>
+                            </div>
                             <div class="col-xs-12 col-sm-9 col-md-10">
                                 <div class="row flex flex-row">
                                     <div class="col-xs-3 col-sm-5 text-center">
@@ -107,8 +109,10 @@
                             <div class="hidden-xs col-sm-3 col-md-2 flex"> <img src="img/parcours-pro/hoche.jpg" alt="" class="img-responsive img-rounded center-block" width="90" id="logo-hoche"> </div>
                         </div>
                         <div class="row filiere">
-                            <div class="col-xs-6 col-xs-offset-3 visible-xs"> <img src="img/parcours-pro/descartes.png" alt="" class="img-responsive img-rounded center-block" id="logo-descartes">
-                                <br> </div>
+                            <div class="row visible-xs">
+                                <div class="col-xs-6 col-xs-offset-3 visible-xs"> <img src="img/parcours-pro/descartes.png" alt="" class="img-responsive img-rounded center-block" id="logo-descartes">
+                                    <br> </div>
+                            </div>
                             <div class="col-xs-12 col-sm-9 col-md-10">
                                 <div class="row flex flex-row">
                                     <div class="col-xs-3 col-sm-5 text-center">
@@ -145,8 +149,10 @@
                             <div class="hidden-xs col-sm-3 col-md-2"> <img src="img/parcours-pro/descartes.png" alt="" class="img-responsive img-rounded center-block" id="logo-descartes"> </div>
                         </div>
                         <div class="row filiere">
-                            <div class="col-xs-6 col-xs-offset-3 visible-xs"> <img src="img/parcours-pro/ingesup.jpg" alt="" class="img-responsive img-rounded center-block" id="logo-ingesup">
-                                <br> </div>
+                            <div class="row visible-xs">
+                                <div class="col-xs-6 col-xs-offset-3 visible-xs"> <img src="img/parcours-pro/ingesup.jpg" alt="" class="img-responsive img-rounded center-block" id="logo-ingesup">
+                                    <br> </div>
+                            </div>
                             <div class="col-xs-12 col-sm-9 col-md-10">
                                 <div class="row flex flex-row">
                                     <div class="col-xs-3 col-sm-5 text-center">
@@ -163,8 +169,10 @@
                     <!-- DEBUT Stages -->
                     <div class="row tab-pane fade" id="stages">
                         <div class="row filiere">
-                            <div class="visible-xs col-xs-offset-3 col-xs-6"> <img src="img/parcours-pro/grandoptical.png" alt="" class="img-responsive img-rounded center-block" id="logo-grdopt">
-                                <br> </div>
+                            <div class="row visible-xs">
+                                <div class="visible-xs col-xs-offset-3 col-xs-6"> <img src="img/parcours-pro/grandoptical.png" alt="" class="img-responsive img-rounded center-block" id="logo-grdopt">
+                                    <br> </div>
+                            </div>
                             <div class="col-xs-12 col-sm-9 col-md-10">
                                 <div class="row flex flex-row">
                                     <div class="col-xs-3 col-sm-5 text-center">
@@ -188,8 +196,10 @@
                     <!-- DEBUT Associatif -->
                     <div class="row tab-pane fade" id="associatif">
                         <div class="row filiere">
-                            <div class="visible-xs col-xs-offset-3 col-xs-6"> <img src="img/parcours-pro/aps.png" alt="" class="img-responsive img-rounded center-block" id="logo-aps" width="200">
-                                <br> </div>
+                            <div class="row visible-xs">
+                                <div class="visible-xs col-xs-offset-3 col-xs-6"> <img src="img/parcours-pro/aps.png" alt="" class="img-responsive img-rounded center-block" id="logo-aps" width="200">
+                                    <br> </div>
+                            </div>
                             <div class="col-xs-12 col-sm-9 col-md-10">
                                 <div class="row flex flex-row">
                                     <div class="col-xs-3 col-sm-5 text-center">
