--- a/contact.html
+++ b/contact.html
@@ -105,16 +105,16 @@
     <footer class="navbar navbar-default navbar-fixed-bottom">
         <div class="container">
             <div class="navbar-left">
-                <p class="text-muted">© Copyright 2016 Axel Floquet-Trillot</p>
+                <p>© Copyright 2016 Axel Floquet-Trillot</p>
             </div>
-            <div class="navbar-right">
+            <div class="navbar-right flex flex-row">
                 <script type="text/javascript">
                     genererIconeMail();
                 </script>
-                <a href="https://www.facebook.com/axelft"><img src="" alt="Facebook"></a>
-                <a href="https://www.linkedin.com/axelft"><img src="" alt="LinkedIn"></a>
-                <a href="https://www.3dhubs.com/hubs/axelft0"><img src="" alt="3DHubs"></a>
-                <a href="https://bitbucket.org/axelft/"><img src="" alt="BitBucket"></a>
+                <a href="https://www.facebook.com/axelft" target="_blank"><img src="img/facebook.svg" alt="Facebook" class="img-responsive img-circle" width="32"></a>
+                <a href="https://www.linkedin.com/in/axel-floquet-trillot-79b605108" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn" class="img-responsive" width="32"></a>
+                <a href="https://www.3dhubs.com/paris/hubs/axel-0" target="_blank"><img src="img/3D-Hubs-logo.png" class="img-responsive img-circle" width="32" alt="3DHubs"></a>
+                <a href="https://bitbucket.org/axelft/" target="_blank"><img src="img/bitbucket.svg" alt="BitBucket" width="32" class="img-responsive img-circle"></a>
             </div>
         </div>
     </footer>
