--- a/parcours-personnel.html
+++ b/parcours-personnel.html
@@ -57,7 +57,7 @@
             <!-- /.container-fluid -->
         </nav>
     </header>
-    <div id="wrapper"></div>
+    <!-- DEBUT footer -->
     <footer class="navbar navbar-default navbar-fixed-bottom">
         <div class="container">
             <div class="navbar-left">
@@ -74,6 +74,7 @@
             </div>
         </div>
     </footer>
+    <!-- FIN footer -->
     <!-- JQUERY ET BOOTSRAP JS-->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
