--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mon Portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
     <link rel="stylesheet" href="css/style-general.css">
+    <link rel="stylesheet" href="css/style-accueil.css">
     <script type="text/javascript" src="js/mail.js"></script>
     <!-- BOOTSTRAP -->
     <!-- Latest compiled and minified CSS -->
@@ -18,7 +20,24 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
-</head>
+    <!-- FAVICON -->
+    <link rel="apple-touch-icon" sizes="57x57" href="img/favicon.ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/favicon.ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon.ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon.ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/favicon.ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/favicon.ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/favicon.ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/favicon.ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon.ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/favicon.ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon.ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.ico/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon.ico/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="img/favicon.ico/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff"> </head>
 
 <body>
     <header>
@@ -59,13 +78,24 @@
             <!-- FIN container-fluid -->
         </nav>
     </header>
-    <div id="wrapper">
-        <div class="container-fluid">
-            <div class="row">
-                <div id="img-header" class="flex"><img src="img/presentation/profil.jpg" alt="" class="img-responsive img-circle center-block" id="img-profile"></div>
+    <div class="container-fluid">
+        <div class="row">
+            <div id="img-header" class="flex"><img src="img/presentation/profil.jpg" alt="" class="img-responsive img-circle center-block" id="img-profile"></div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-justify">
+                <h2 class="text-center">Qui suis-je ?</h2>
+                <p> Je m'appelle Axel Floquet-Trillot, j'ai 22 ans, et je suis aujourd'hui étudiant en informatique en première année à Ingésup sur le campus d'Ynov Paris. </p>
+                <p> J'ai obtenu mon bac Scientifique en 2012, après mes études secondaires au Lycée Hoche de Versailles. Je suis entré en PACES (Première Année Commune aux Etudes de Santé) en 2012 dans le but initial de faire médecine.
+                    <br> Comme une majorité d'étudiants, j'ai d'abord redoublé la PACES avant d'être reçu-collé au concours (ma moyenne était supérieure à 10 mais mon classement, à quelques places près, ne me permettait pas d'entrer dans une des filières de santé). </p>
+                <p> J'ai tout de même obtenu une équivalence pour entrer en L2 Sciences pour la Santé. J'ai donc poursuivi mes études pendant 2 ans jusqu'à obtention du diplôme de la Licence Sciences et Technologies - Mention Sciences pour la Santé en 2015. Pendant ces deux ans, j'ai surtout étudié la biologie (bactériologie, immunologie, hématologie, virologie, neurologie, etc), la biochimie (métabolisme, etc), et la physiologie (fonctionnement du corps humain sans pathologie). </p>
+                <p> Pendant ces deux années de licence, j'ai pris le temps de construire un nouveau projet professionnel, que j'avais d'abord axé sur la neurologie. L'élément qui a déclenché</p>
             </div>
         </div>
     </div>
+    <!-- DEBUT footer -->
     <footer class="navbar navbar-default navbar-fixed-bottom">
         <div class="container">
             <div class="navbar-left">
@@ -82,6 +112,7 @@
             </div>
         </div>
     </footer>
+    <!-- FIN footer -->
     <!-- JQUERY ET BOOTSRAP JS-->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
