--- a/index.html
+++ b/index.html
@@ -90,23 +90,28 @@
             <p><a class="btn btn-primary btn-lg" href="/parcours-professionnel.html" role="button">Mon parcours</a></p>
         </div>
     </div>
-    <div class="container text-justify">
+    <div class="container text-justify wrapper">
         <div class="row">
             <div class="col-md-12">
                 <h2 class="text-center">Qui suis-je ?</h2> </div>
         </div>
         <div class="row flex flex-row">
             <div class="col-sm-8 col-md-9 flex">
-                <p> J'ai obtenu mon bac Scientifique en 2012, après mes études secondaires au Lycée Hoche de Versailles. Je suis entré en PACES (Première Année Commune aux Etudes de Santé) en 2012 dans le but initial de faire médecine.
-                    <br> Comme une majorité d'étudiants, j'ai d'abord redoublé la PACES avant d'être reçu-collé au concours (ma moyenne était supérieure à 10 mais mon classement, à quelques places près, ne me permettait pas d'entrer dans une des filières de santé). </p>
+                <p> J'ai obtenu mon bac Scientifique en 2012, après mes études secondaires au Lycée Hoche de Versailles. Je suis entré en PACES (Première Année Commune aux Etudes de Santé) en 2012 dans le but initial de faire médecine.</p>
             </div>
+            <div class="col-sm-4 col-md-3 flex"> <img src="img/presentation/lycee_hoche.JPG" alt="" class="img-responsive"> </div>
+        </div>
+        <div class="row flex flex-row flex-row-reverse">
             <div class="col-sm-4 col-md-3 flex"> <img src="img/presentation/medical.jpg" alt="" class="img-responsive"> </div>
+            <div class="col-sm-8 col-md-9 flex">
+                <p>Comme une majorité d'étudiants, j'ai d'abord redoublé la PACES avant d'être reçu-collé au concours (ma moyenne était supérieure à 10 mais mon classement, à quelques places près, ne me permettait pas d'entrer dans une des filières de santé). </p>
+            </div>
         </div>
         <div class="row flex flex-row">
-            <div class="col-sm-4 col-md-3 flex"> <img src="img/presentation/science-eprouvette.jpg" alt="" class="img-responsive"> </div>
             <div class="col-sm-8 col-md-9 flex">
                 <p> J'ai tout de même obtenu une équivalence pour entrer en L2 Sciences pour la Santé. J'ai donc poursuivi mes études pendant 2 ans jusqu'à obtention du diplôme de la Licence Sciences et Technologies - Mention Sciences pour la Santé en 2015. Pendant ces deux ans, j'ai surtout étudié la biologie (bactériologie, immunologie, hématologie, virologie, neurologie, etc), la biochimie (métabolisme, etc), et la physiologie (fonctionnement du corps humain sans pathologie). </p>
             </div>
+            <div class="col-sm-4 col-md-3 flex"> <img src="img/presentation/science-eprouvette.jpg" alt="" class="img-responsive"> </div>
         </div>
         <div class="row">
             <div class="col-md-12">
