--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mon Portfolio</title>
+    <title>Mon Portfolio - Présentation</title>
     <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
     <link rel="stylesheet" href="css/style-general.css">
     <link rel="stylesheet" href="css/style-accueil.css">
@@ -96,35 +96,38 @@
                 <h2 class="text-center">Qui suis-je ?</h2> </div>
         </div>
         <div class="row flex flex-row">
-            <div class="col-sm-8 col-md-9 flex">
+            <div class="col-sm-8 col-md-9 col-lg-7 flex">
                 <p> J'ai obtenu mon bac Scientifique en 2012, après mes études secondaires au Lycée Hoche de Versailles. Je suis entré en PACES (Première Année Commune aux Etudes de Santé) en 2012 dans le but initial de faire médecine.</p>
             </div>
-            <div class="col-sm-4 col-md-3 flex"> <img src="img/presentation/lycee_hoche.JPG" alt="" class="img-responsive"> </div>
+            <div class="col-sm-4 col-md-3 col-lg-5 flex"> <img src="img/presentation/lycee_hoche.JPG" alt="" class="img-responsive"> </div>
         </div>
         <div class="row flex flex-row flex-row-reverse">
-            <div class="col-sm-4 col-md-3 flex"> <img src="img/presentation/medical.jpg" alt="" class="img-responsive"> </div>
-            <div class="col-sm-8 col-md-9 flex">
+            <div class="col-sm-4 col-md-3 col-lg-5 flex"> <img src="img/presentation/medical.jpg" alt="" class="img-responsive"> </div>
+            <div class="col-sm-8 col-md-9 col-lg-7 flex">
                 <p>Comme une majorité d'étudiants, j'ai d'abord redoublé la PACES avant d'être reçu-collé au concours (ma moyenne était supérieure à 10 mais mon classement, à quelques places près, ne me permettait pas d'entrer dans une des filières de santé). </p>
             </div>
         </div>
         <div class="row flex flex-row">
-            <div class="col-sm-8 col-md-9 flex">
-                <p> J'ai tout de même obtenu une équivalence pour entrer en L2 Sciences pour la Santé. J'ai donc poursuivi mes études pendant 2 ans jusqu'à obtention du diplôme de la Licence Sciences et Technologies - Mention Sciences pour la Santé en 2015. Pendant ces deux ans, j'ai surtout étudié la biologie (bactériologie, immunologie, hématologie, virologie, neurologie, etc), la biochimie (métabolisme, etc), et la physiologie (fonctionnement du corps humain sans pathologie). </p>
+            <div class="col-sm-8 col-md-9 col-lg-7 flex">
+                <p> J'ai obtenu une équivalence pour entrer en L2 Sciences pour la Santé. J'ai donc poursuivi mes études pendant 2 ans jusqu'à obtention du diplôme de la Licence Sciences et Technologies - Mention Sciences pour la Santé en 2015. Pendant ces deux ans, j'ai surtout étudié la biologie (bactériologie, immunologie, hématologie, virologie, neurologie, etc), la biochimie (métabolisme, etc), et la physiologie (fonctionnement du corps humain sans pathologie). </p>
             </div>
-            <div class="col-sm-4 col-md-3 flex"> <img src="img/presentation/science-eprouvette.jpg" alt="" class="img-responsive"> </div>
+            <div class="col-sm-4 col-md-3 col-lg-5 flex"> <img src="img/presentation/science-eprouvette.jpg" alt="" class="img-responsive"> </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <p> Pendant ces deux années de licence, j'ai pris le temps de construire un nouveau projet professionnel, que j'avais d'abord axé sur la neurologie. L'élément qui a déclenché ma réorientation est mon entrée dans le BDE de la licence.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <p>Je suis devenu Vice-Président charge de la Communication de l'Amicale Paris Sciences en 2015 - 2016. A cette fonction, j'ai du concevoir un site dynamique que j'ai basé sur Joomla!.</p>
+        <div class="row flex flex-row">
+            <div class="col-sm-4 col-md-3 col-lg-5 flex"> <img src="img/presentation/photo_gala_aps.jpg" alt="" class="img-responsive"></div>
+            <div class="col-sm-8 col-md-9 col-lg-7 flex">
+                <p> Pendant ces deux années de licence, j'ai pris le temps de construire un nouveau projet professionnel, que j'avais d'abord axé sur la neurologie. L'élément qui a déclenché ma réorientation en informatique est mon entrée dans l'Amicale Paris Sciences (l'APS, le BDE de la licence), dans lequel j'ai passé un mandat en tant que Vice-Président chargé de la Communication.</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
+        <div class="row flex flex-row">
+            <div class="col-sm-8 col-md-9 col-lg-7 flex">
+                <p>Pendant ce mandat, j'ai du reconcevoir le site de l'APS, qui n'avait pas été mis à jour depuis plusieurs années. C'est en démarrant ce projet que j'ai appris le PHP, SQL, HTML et CSS. Le site est dynamique et basé sur Joomla!. Il est accessible directement par le menu, dans la catégorie Fichiers / Liens.</p>
+            </div>
+            <div class="col-sm-4 col-md-3 col-lg-5 flex"> <img src="img/presentation/site_aps.jpeg" alt="" class="img-responsive"> </div>
+        </div>
+        <div class="row flex flex-row">
+            <div class="col-sm-4 col-md-3 col-lg-5 flex"> <img class="img-responsive" alt="" src="img/presentation/OpenClassrooms_Homepage.png"> </div>
+            <div class="col-sm-8 col-md-9 col-lg-7 flex">
                 <p>C'est après avoir codé ce site et beaucoup de temps sur OpenClassrooms (avec des cours sur plusieurs langages) que je me suis décidé à entrer en première année d'Ingésup, en ingéniérie informatique.</p>
             </div>
         </div>
