--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mon Portfolio</title>
+    <title>Mon Portfolio - Parcours</title>
+    <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
     <link rel="stylesheet" href="css/style-general.css">
-    <link rel="stylesheet" href="css/style-parcours-pro.css">
+    <link rel="stylesheet" href="css/style-parcours.css">
     <script src="js/mail.js" type="text/javascript"></script>
     <!-- BOOTSTRAP -->
     <!-- Latest compiled and minified CSS -->
@@ -78,7 +79,7 @@
         </nav>
     </header>
     <!-- DEBUT container -->
-    <div class="container">
+    <div class="container wrapper">
         <div class="row">
             <div class="col-md-12">
                 <!-- DEBUT Onglets -->
@@ -261,8 +262,8 @@
                                 </div>
                                 <div class="col-xs-8 col-sm-7 flex"><strong>Membre Ancien de l'Amicale Paris Sciences</strong>
                                     <ul>
-                                        <li>Rôle de conseil pour le nouveau Bureau</li>
-                                        <li>Aide ponctuelle pour l'organisation de certains événementq</li>
+                                        <li>Conseils pour le nouveau Bureau</li>
+                                        <li>Aide ponctuelle pour l'organisation de certains événements</li>
                                     </ul>
                                 </div>
                             </div>
