--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mon Portfolio</title>
+    <title>Mon Portfolio - Contact</title>
+    <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
     <link rel="stylesheet" href="css/style-general.css">
     <link rel="stylesheet" href="css/style-contact.css">
     <!-- BOOTSTRAP -->
@@ -76,7 +77,7 @@
             <!-- /.container-fluid -->
         </nav>
     </header>
-    <div class="container">
+    <div class="container wrapper">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <p class="text-justify">Vous pouvez me contacter pour toute questions via le formulaire ci-dessous ou directement à mon adresse mail :
