--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -103,7 +103,7 @@
                         </div>
                         <div class="col-xs-12 col-sm-9 col-md-10">
                             <div class="row flex flex-row">
-                                <div class="col-xs-3 col-sm-5 text-center">
+                                <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="ligne-temps"></div>
                                     <div class="date center-block flex">
                                         <h4>2009 - 2012</h4> </div>
@@ -111,7 +111,7 @@
                                 <div class="col-xs-9 col-sm-7 flex"> <strong>Etudes secondaires au Lycée Hoche à Versailles</strong> </div>
                             </div>
                             <div class="row flex flex-row">
-                                <div class="col-xs-3 col-sm-5 text-center">
+                                <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="date center-block flex">
                                         <h4><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Juin 2012</h4></div>
                                 </div>
@@ -133,7 +133,7 @@
                         </div>
                         <div class="col-xs-12 col-sm-9 col-md-10">
                             <div class="row flex flex-row">
-                                <div class="col-xs-3 col-sm-5 text-center">
+                                <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="date center-block flex">
                                         <h4>2012 - 2014</h4></div>
                                 </div>
@@ -145,7 +145,7 @@
                                 </div>
                             </div>
                             <div class="row flex flex-row">
-                                <div class="col-xs-3 col-sm-5 text-center">
+                                <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="date center-block flex">
                                         <h4>2014 - 2016</h4></div>
                                 </div>
@@ -157,7 +157,7 @@
                                 </div>
                             </div>
                             <div class="row flex flex-row">
-                                <div class="col-xs-3 col-sm-5 text-center">
+                                <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="date center-block flex">
                                         <h4><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Juin 2016</h4></div>
                                 </div>
@@ -173,7 +173,7 @@
                         </div>
                         <div class="col-xs-12 col-sm-9 col-md-10">
                             <div class="row flex flex-row">
-                                <div class="col-xs-3 col-sm-5 text-center">
+                                <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="date center-block flex">
                                         <h4>2016 - 2017</h4></div>
                                 </div>
@@ -193,7 +193,7 @@
                         </div>
                         <div class="col-xs-12 col-sm-9 col-md-10">
                             <div class="row flex flex-row">
-                                <div class="col-xs-3 col-sm-5 text-center">
+                                <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="date center-block flex">
                                         <h4>Fevrier 2009</h4></div>
                                 </div>
@@ -220,7 +220,7 @@
                         </div>
                         <div class="col-xs-12 col-sm-9 col-md-10">
                             <div class="row flex flex-row">
-                                <div class="col-xs-3 col-sm-5 text-center">
+                                <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="date center-block flex">
                                         <h4>2014 - 2015</h4></div>
                                 </div>
@@ -242,7 +242,7 @@
                                 </div>
                             </div>
                             <div class="row flex flex-row">
-                                <div class="col-xs-3 col-sm-5 text-center">
+                                <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="date center-block flex">
                                         <h4>2015 - 2016</h4></div>
                                 </div>
@@ -256,7 +256,7 @@
                                 </div>
                             </div>
                             <div class="row flex flex-row">
-                                <div class="col-xs-3 col-sm-5 text-center">
+                                <div class="col-xs-3 col-sm-5 text-center flex">
                                     <div class="date center-block flex">
                                         <h4>2016 - 2017</h4></div>
                                 </div>
